# Metvy

final/: .dockerignore  .gitignore  Dockerfile  drizzle.config.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
final/app/: layout.tsx
final/app/(auth)/: actions.ts  auth.config.ts  auth.ts
final/app/(chat)/: actions.ts  page.tsx
final/app/admin/: actions.ts  add-user-dialog.tsx  columns.tsx  layout.tsx  page.tsx  users-table.tsx
final/app/dashboard/: layout.tsx
final/app/upload/: actions.ts  columns.tsx  data-table.tsx  layout.tsx  page.tsx  search.tsx  status-filter.tsx  student-details-dialog.tsx  student-name-search.tsx  upload-dialog.tsx
final/components/: auth-form.tsx  chat-header.tsx  chat.tsx  download-all-resumes-button.tsx  greeting.tsx  message-actions.tsx  message.tsx  messages.tsx  model-selector.tsx  multimodal-input.tsx  response-with-uuids.tsx  selected-resume-bar.tsx  sidebar-user-nav.tsx  submit-button.tsx  uuid-bulk-selector.tsx
final/components/elements/: context.tsx  conversation.tsx  reasoning.tsx
final/components/ui/: calendar.tsx  data-table.tsx  table.tsx
final/lib/: env.ts  errors.ts  gcs.ts  types.ts  utils.ts
final/lib/admin/: auth.ts  cli.ts
final/lib/ai/: entitlements.ts  models.mock.ts  models.ts  prompts.ts  providers.ts
final/lib/db/: actions.ts  index.ts  migrate.ts  queries.ts  (+1 more)
indexing-service/: .dockerignore  Dockerfile  data_cleaner.py  database.py  deploy_script.ps1  init_db.sql  main.py  models.py  parser.py  pyproject.toml  requirements.txt  resume_agent.py  test_local.py  vector_store.py
(+36 files in other folders)
